App service and APIM actions now import resource parameters

--- a/libs/designer-ui/src/lib/card/parameters/parameters.less
+++ b/libs/designer-ui/src/lib/card/parameters/parameters.less
@@ -239,6 +239,7 @@
   vertical-align: top;
   padding-top: 5.5px;
   max-height: (@parameter-inputbox-height + 2px);
+  text-transform: capitalize;
 
   &.msla-schema-label {
     flex: 1 1 100%;
