--- a/libs/designer-ui/src/lib/panel/recommendationpanel/operationSearchHeader/operationSearchHeader.less
+++ b/libs/designer-ui/src/lib/panel/recommendationpanel/operationSearchHeader/operationSearchHeader.less
@@ -1,9 +1,9 @@
-.msla-search-heading-container {
+.msla-sub-heading-container {
   margin: 0px -24px 12px;
-  padding: 24px 24px 12px;
+  padding: 12px 24px;
   z-index: 1;
   position: sticky;
-  top: 0px;
+  top: 68px;
 
   display: flex;
   flex-direction: column;
@@ -34,7 +34,7 @@
 }
 
 body.dark {
-  .msla-search-heading-container {
+  .msla-sub-heading-container {
     background-color: @ms-color-secondaryBackground;
   }
 }
