Improved the no-results error

--- a/libs/designer-ui/src/lib/panel/recommendationpanel/recommendation.less
+++ b/libs/designer-ui/src/lib/panel/recommendationpanel/recommendation.less
@@ -60,6 +60,15 @@ body.dark {
   gap: 8px;
 }
 
+.msla-no-results-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+  gap: 32px;
+}
+
 // These classes are strange but it's so that we get two columns on our FluentUI list
 
 .msla-result-list {
