--- a/libs/designer-ui/src/lib/panel/recommendationpanel/recommendation.less
+++ b/libs/designer-ui/src/lib/panel/recommendationpanel/recommendation.less
@@ -5,6 +5,26 @@
 
 @import (reference) '../../variables.less';
 
+.msla-app-action-header {
+  margin: 0px -24px;
+  padding: 24px 24px 12px;
+  z-index: 1;
+  position: sticky;
+  top: 0px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #fff;
+}
+
+body.dark {
+  .msla-app-action-header {
+    background-color: @ms-color-secondaryBackground;
+  }
+}
+
 .msla-filter-container {
   margin-top: 7px;
   padding: 5px;
@@ -38,6 +58,15 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 8px;
+}
+
+.msla-no-results-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+  gap: 32px;
 }
 
 // These classes are strange but it's so that we get two columns on our FluentUI list
