--- a/libs/designer-ui/src/lib/styles.less
+++ b/libs/designer-ui/src/lib/styles.less
@@ -76,6 +76,7 @@
 @import './selectConnection/selectConnection.less';
 @import './createConnection/createConnection.less';
 @import './modals/styles.less';
+@import './recurrence/recurrence.less';
 @import './azureResourcePicker/azureResourcePicker.less';
 
 .msla-clear-both {
