--- a/libs/designer-ui/src/lib/editor/base/editor.less
+++ b/libs/designer-ui/src/lib/editor/base/editor.less
@@ -150,3 +150,15 @@
   bottom: 15px;
   left: 4px;
 }
+
+.msla-token-picker-entrypoint-button-container {
+  display: block;
+  position: fixed;
+  border-radius: 20px;
+  background-color: white;
+  width: 40px;
+  height: 60px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+  z-index: 1000000;
+  background-color: lightskyblue;
+}
