--- a/apps/vs-code-designer-react/src/app/app.less
+++ b/apps/vs-code-designer-react/src/app/app.less
@@ -1,1 +1,12 @@
 /* Your styles goes here. */
+.designer {
+  &--error {
+    height: 100vh;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+  }
+  &--loading {
+    height: 100vh;
+  }
+}
