--- a/libs/designer-ui/src/lib/expressioneditor/expressioneditor.less
+++ b/libs/designer-ui/src/lib/expressioneditor/expressioneditor.less
@@ -1,3 +1,5 @@
+@import (reference) '../variables.less';
+
 .msla-expression-editor-container {
   height: 100%;
   background-color: #fff;
@@ -27,5 +29,66 @@
 body.dark {
   .msla-expression-editor-container {
     background-color: rgb(30, 30, 30); /* monaco-editor vs-dark */
+  }
+}
+
+.msla-expression-editor-updated-container {
+  height: 100%;
+  background-color: #fafafa;
+  position: relative;
+
+  & > div {
+    height: 100px;
+    padding: 10px 20px;
+    resize: vert;
+
+    .monaco-editor {
+      border: 1px solid @defaultBorderColor;
+      .monaco-scrollable-element {
+        left: 10px;
+      }
+      .decorationsOverviewRuler {
+        display: none;
+      }
+
+      .view-overlays .current-line {
+        border: none;
+      }
+
+      /* Undo after https://github.com/Microsoft/monaco-editor/issues/810 is fixed */
+      .wrapper {
+        overflow: hidden;
+      }
+    }
+  }
+
+  .msla-expression-editor-expand {
+    position: absolute;
+    cursor: s-resize;
+    width: 15px;
+    height: 15px;
+    right: 18px;
+    bottom: 8px;
+    padding: 0px;
+
+    .msla-expression-editor-expand-icon {
+      position: relative;
+      width: calc(8px * 1.41);
+      border-bottom: 0.2px solid @defaultBorderColor;
+      transform: rotate(135deg);
+      transform-origin: left;
+      left: 13px;
+      top: 5px;
+    }
+    .msla-expression-editor-expand-icon-2 {
+      position: relative;
+      width: calc(4px * 1.41);
+      border-bottom: 0.2px solid @defaultBorderColor;
+      transform: rotate(135deg);
+      transform-origin: left;
+      position: relative;
+      top: 8px;
+      left: 13px;
+    }
   }
 }
