--- a/libs/designer-ui/src/lib/tokenpicker/tokenpicker.less
+++ b/libs/designer-ui/src/lib/tokenpicker/tokenpicker.less
@@ -1,17 +1,31 @@
+@import (reference) '../variables.less';
 .msla-token-picker-container {
-  max-height: 550px;
-  width: 400px;
+  background-color: #fafafa;
 }
 
 .msla-token-picker {
-  background-color: #fff;
-  box-shadow: 2px 2px 10px rgb(0 0 0 / 10%);
+  box-shadow: 2px 2px 10px rgba(246, 243, 243, 0.1);
   box-sizing: border-box;
   padding: 1px;
   display: flex;
   flex-direction: column;
   max-height: inherit;
 }
+
+.msla-token-picker-header {
+  display: flex;
+  flex-direction: row-reverse;
+  padding: 5px 5px 0px 5px;
+  border-bottom: 1px solid #f6f6f6;
+}
+
+.msla-token-picker-footer {
+  padding: 5px;
+  border-top: 1px solid #f6f6f6;
+  position: relative;
+  bottom: 0px;
+}
+
 .msla-token-picker-search {
   background-color: #c8cac7;
   border: none;
@@ -57,7 +71,6 @@
 
 .msla-token-picker-sections {
   box-sizing: border-box;
-  max-height: 550px;
   overflow-y: auto;
 }
 
