--- a/libs/designer-ui/src/lib/tokenpicker/tokenpicker.less
+++ b/libs/designer-ui/src/lib/tokenpicker/tokenpicker.less
@@ -25,18 +25,14 @@
   position: relative;
   bottom: 0px;
 }
-
-.msla-token-picker-search {
-  background-color: #c8cac7;
-  border: none;
-  box-sizing: border-box;
-  padding: 12px;
-  position: relative;
-  .msla-token-picker-search-icon {
-    left: 21px;
-    position: absolute;
-    top: 17px;
-    z-index: 1;
+.msla-token-picker-search-container {
+  padding: 10px;
+  .msla-token-picker-search {
+    border: 1px solid @defaultBorderColor;
+    box-sizing: border-box;
+    height: 26px;
+    width: 90%;
+    margin: auto;
   }
 }
 
