--- a/libs/designer-ui/src/lib/dictionary/dictionaryeditor.less
+++ b/libs/designer-ui/src/lib/dictionary/dictionaryeditor.less
@@ -92,20 +92,21 @@
           display: table-cell;
           vertical-align: top;
           width: 49%;
-          padding-bottom: 5px;
           .editor-input {
             outline: none;
             resize: none;
             font-size: 15px;
             tab-size: 1;
             min-height: 30px;
-            line-height: 26px;
+            line-height: 20px;
             caret-color: #444;
             padding-inline-start: 5px;
             &.readonly {
               background-color: rgba(128, 128, 128, 0.1);
             }
             p {
+              padding-top: 5px;
+              padding-bottom: 2px;
               margin: 0;
             }
           }
@@ -114,7 +115,7 @@
             overflow: hidden;
             position: absolute;
             text-overflow: ellipsis;
-            margin-top: -27px;
+            margin-top: -25px;
             margin-left: 5px;
             font-size: 15px;
             user-select: none;
