--- a/libs/designer-ui/src/lib/settings/settings.less
+++ b/libs/designer-ui/src/lib/settings/settings.less
@@ -11,13 +11,15 @@
     font-size: 15px;
     tab-size: 1;
     min-height: 30px;
-    line-height: 30px;
+    line-height: 20px;
     caret-color: #444;
     padding-inline-start: 5px;
     &.readonly {
       background-color: rgba(128, 128, 128, 0.1);
     }
     p {
+      padding-top: 5px;
+      padding-bottom: 2px;
       margin: 0;
     }
   }
