updated error for expression editor

--- a/libs/designer-ui/src/lib/tokenpicker/tokenpicker.less
+++ b/libs/designer-ui/src/lib/tokenpicker/tokenpicker.less
@@ -65,6 +65,11 @@
   }
 }
 
+.msla-token-picker-expression-editor-error {
+  color: rgb(224, 2, 2);
+  padding-left: 20px;
+}
+
 .msla-token-picker-sections {
   box-sizing: border-box;
   overflow-y: auto;
