fixing combobox token picker

--- a/libs/designer-ui/src/lib/combobox/combobox.less
+++ b/libs/designer-ui/src/lib/combobox/combobox.less
@@ -31,9 +31,9 @@
     resize: none;
     text-overflow: ellipsis;
     display: flex;
+    position: relative;
 
     .msla-combobox-editor {
-      width: calc(100% - 30px);
       position: relative;
       .editor-input {
         outline: none;
@@ -50,7 +50,8 @@
         }
         p {
           margin: 0;
-          line-height: 30px;
+          line-height: 22px;
+          padding: 4px 30px 4px 0px;
           margin-inline-start: 2px;
         }
       }
