Removed all references to the document and body elements

--- a/libs/designer-ui/src/lib/azureResourcePicker/azureResourcePicker.less
+++ b/libs/designer-ui/src/lib/azureResourcePicker/azureResourcePicker.less
@@ -75,7 +75,7 @@
   }
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-azure-resource-entry {
     border-bottom: 1px solid @ms-color-secondaryBorder;
 
