--- a/libs/designer-ui/src/lib/card/card.less
+++ b/libs/designer-ui/src/lib/card/card.less
@@ -687,7 +687,7 @@
   margin-left: 6px;
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-tab-component-container {
     .msla-card,
     .msla-card-placeolder {
@@ -1126,7 +1126,7 @@ body.dark {
   }
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-information-box-container {
     .msla-information-box {
       a {
