--- a/libs/designer-ui/src/lib/card/config/config.less
+++ b/libs/designer-ui/src/lib/card/config/config.less
@@ -142,7 +142,7 @@
   .config-item-narrow-width-mixin();
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-card-config-item {
     > label {
       color: @ms-color-neutralPrimary;
