--- a/libs/designer-ui/src/lib/card/recurrence.less
+++ b/libs/designer-ui/src/lib/card/recurrence.less
@@ -18,7 +18,7 @@
   margin-right: 6px;
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-recurrence-preview {
     border: 1px dashed #fff;
     background-color: #3c3c6e;
