--- a/libs/designer-ui/src/lib/expressioneditor/expressioneditor.less
+++ b/libs/designer-ui/src/lib/expressioneditor/expressioneditor.less
@@ -24,7 +24,7 @@
   }
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-expression-editor-container {
     background-color: rgb(30, 30, 30); /* monaco-editor vs-dark */
   }
