--- a/libs/designer-ui/src/lib/htmlwysiwygeditor.less
+++ b/libs/designer-ui/src/lib/htmlwysiwygeditor.less
@@ -85,7 +85,7 @@
 }
 
 /* Note: The HTML editor does not support theming. */
-body.dark {
+.msla-theme-dark {
   .msla-html-wysiwyg-editor {
     .rdw-editor-toolbar {
       color: #000;
