--- a/libs/designer-ui/src/lib/inputcontrol/inputcontrol.less
+++ b/libs/designer-ui/src/lib/inputcontrol/inputcontrol.less
@@ -151,7 +151,7 @@
   }
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-editor-input-control,
   .msla-input-control {
     background-color: @ms-color-white;
