--- a/libs/designer-ui/src/lib/panel/panel.less
+++ b/libs/designer-ui/src/lib/panel/panel.less
@@ -222,13 +222,13 @@
   gap: 8px;
 }
 
-body.light {
+.msla-theme-light {
   .msla-panel-comment-container {
     background-color: @panel-mode-comment-field-color_light;
   }
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-panel-comment-container {
     background-color: @ms-color-primaryBackground;
     .ms-TextField-field {
