--- a/libs/designer-ui/src/lib/panel/recommendationpanel/recommendation.less
+++ b/libs/designer-ui/src/lib/panel/recommendationpanel/recommendation.less
@@ -19,7 +19,7 @@
   background-color: #fff;
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-app-action-header {
     background-color: @ms-color-secondaryBackground;
   }
