--- a/libs/designer-ui/src/lib/picker/picker.less
+++ b/libs/designer-ui/src/lib/picker/picker.less
@@ -304,7 +304,7 @@ a.msla-picker {
   top: 2px;
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-picker-header {
     background-color: @ms-color-white;
 
