--- a/libs/designer-ui/src/lib/querybuilder/querybuilder.less
+++ b/libs/designer-ui/src/lib/querybuilder/querybuilder.less
@@ -151,7 +151,7 @@
   top: 16px;
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-querybuilder-group-content {
     background-color: @ms-color-bodyBackground;
   }
