--- a/libs/designer-ui/src/lib/recommendation/recommendation.less
+++ b/libs/designer-ui/src/lib/recommendation/recommendation.less
@@ -659,7 +659,7 @@
   }
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-recommendation-v3 {
     .msla-connectors {
       background-color: @ms-color-white;
