--- a/libs/designer-ui/src/lib/reset.less
+++ b/libs/designer-ui/src/lib/reset.less
@@ -48,7 +48,7 @@
   font-size: 0;
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-container {
     background-color: @ms-color-bodyBackground;
     color: @ms-color-bodyText;
