--- a/libs/designer-ui/src/lib/rulescontrol/rulescontrol.less
+++ b/libs/designer-ui/src/lib/rulescontrol/rulescontrol.less
@@ -107,7 +107,7 @@
   }
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-rules-builder {
     .eb-TreeLineGutter {
       border-color: @ms-color-themePrimary !important; /* @brandColor */
