--- a/libs/designer-ui/src/lib/selector/listitem.less
+++ b/libs/designer-ui/src/lib/selector/listitem.less
@@ -47,7 +47,7 @@
   }
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-card-menu-title {
     .msla-card-menu-subtitle-text {
       color: @ms-color-themePrimary;
