--- a/libs/designer-ui/src/lib/styles.less
+++ b/libs/designer-ui/src/lib/styles.less
@@ -115,7 +115,7 @@
   }
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-designer-canvas,
   .msla-monitor-canvas {
     background-color: @ms-color-bodyBackground;
@@ -320,7 +320,7 @@ body.dark {
   }
 }
 
-body.dark {
+.msla-theme-dark {
   background-color: @ms-color-bodyBackground;
   color: @ms-color-bodyText;
 
@@ -432,7 +432,7 @@ body.dark {
   visibility: hidden;
 }
 
-body.dark {
+.msla-theme-dark {
   .ms-Panel-main {
     background-color: @ms-color-secondaryBackground;
     box-shadow: none;
