--- a/libs/designer-ui/src/lib/templates.less
+++ b/libs/designer-ui/src/lib/templates.less
@@ -715,7 +715,7 @@
   }
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-template-trigger-selector {
     .msla-template-trigger-selector-header {
       .msla-template-trigger-selector-header-title {
