--- a/libs/designer-ui/src/lib/tokenpicker/tokenpicker.less
+++ b/libs/designer-ui/src/lib/tokenpicker/tokenpicker.less
@@ -216,7 +216,7 @@
   bottom: 5px;
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-token-picker {
     background: @ms-color-secondaryBackground;
   }
