--- a/libs/designer-ui/src/lib/workflowparameters/workflowparameters.less
+++ b/libs/designer-ui/src/lib/workflowparameters/workflowparameters.less
@@ -40,7 +40,7 @@
     flex-direction: column;
   }
 
-  body.dark {
+  .msla-theme-dark {
     .msla-workflow-parameters-text {
       color: @ms-color-themePrimary;
     }
