--- a/libs/designer/src/lib/ui/connections/runAfterIndicator/styles.less
+++ b/libs/designer/src/lib/ui/connections/runAfterIndicator/styles.less
@@ -8,13 +8,13 @@
   background: @card-background-color;
 }
 
-body.light {
+.msla-theme-light {
   .msla-run-after-dot-container {
     background: #fff;
   }
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-run-after-dot-container {
     background: @ms-color-primaryBackground;
   }
