--- a/libs/designer/src/lib/ui/settings/sections/runafterconfiguration/runafterconfiguration.less
+++ b/libs/designer/src/lib/ui/settings/sections/runafterconfiguration/runafterconfiguration.less
@@ -169,7 +169,7 @@
   width: 100%;
 }
 
-body.light {
+.msla-theme-light {
   .msla-run-after-configure-select-button,
   .msla-run-after-edge-header-contents-container {
     &:hover {
@@ -183,7 +183,7 @@ body.light {
   }
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-run-after-configure-select-button,
   .msla-run-after-edge-header-contents-container {
     &:hover {
