--- a/libs/designer-ui/src/lib/actionbuttonv2/actionbuttonv2.less
+++ b/libs/designer-ui/src/lib/actionbuttonv2/actionbuttonv2.less
@@ -33,7 +33,7 @@
   }
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-action-button-v2 {
     background-color: @ms-color-primaryBackground;
     border: 1px solid @ms-color-primaryBorder;
