--- a/libs/designer-ui/src/lib/card/cardv2.less
+++ b/libs/designer-ui/src/lib/card/cardv2.less
@@ -42,7 +42,7 @@
   }
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-card-v2 {
     background-color: @ms-color-white;
     box-shadow: 0 0.3px 0.9px rgba(255, 255, 255, 0.1), 0 1.6px 3.6px rgba(255, 255, 255, 0.13);
