--- a/libs/designer-ui/src/lib/card/graphContainer/graphContainer.less
+++ b/libs/designer-ui/src/lib/card/graphContainer/graphContainer.less
@@ -11,7 +11,7 @@
   }
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-graph-container {
     background-color: @ms-color-secondaryBackground;
     border: 2px solid @ms-color-primaryBorder;
