--- a/libs/designer-ui/src/lib/connectioncontainer.less
+++ b/libs/designer-ui/src/lib/connectioncontainer.less
@@ -184,7 +184,7 @@
   }
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-connection-container-body {
     [class^='ms-List-cell'] {
       background-color: @ms-color-white;
