--- a/libs/designer-ui/src/lib/dropdown/dropdown.less
+++ b/libs/designer-ui/src/lib/dropdown/dropdown.less
@@ -16,7 +16,7 @@
   }
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-multiselectdropdown-title {
     &.msla-multiselectdropdown-title-placeholder {
       color: @ms-color-neutralSecondary;
