--- a/libs/designer-ui/src/lib/monitoring/monitoring.less
+++ b/libs/designer-ui/src/lib/monitoring/monitoring.less
@@ -196,7 +196,7 @@
   display: inline;
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-trace-inputs-outputs {
     background-color: @ms-color-white;
 
