--- a/libs/designer-ui/src/lib/panel/recommendationpanel/operationSearchCard/operationSearchCard.less
+++ b/libs/designer-ui/src/lib/panel/recommendationpanel/operationSearchCard/operationSearchCard.less
@@ -63,7 +63,7 @@
   font: 11px/20px;
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-op-search-card-container {
     background-color: @ms-color-primaryBackground;
 
