--- a/libs/designer-ui/src/lib/panel/recommendationpanel/operationSearchHeader/operationSearchHeader.less
+++ b/libs/designer-ui/src/lib/panel/recommendationpanel/operationSearchHeader/operationSearchHeader.less
@@ -33,7 +33,7 @@
   }
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-sub-heading-container {
     background-color: @ms-color-secondaryBackground;
   }
