--- a/libs/designer-ui/src/lib/selectConnection/selectConnection.less
+++ b/libs/designer-ui/src/lib/selectConnection/selectConnection.less
@@ -52,7 +52,7 @@
   }
 }
 
-body.dark {
+.msla-theme-dark {
   .ms-DetailsHeader-cellTitle {
     border-right: 1px solid @ms-color-secondaryBorder;
   }
