--- a/libs/designer-ui/src/lib/settings/settings.less
+++ b/libs/designer-ui/src/lib/settings/settings.less
@@ -257,7 +257,7 @@
   }
 }
 
-body.light {
+.msla-theme-light {
   .msla-setting-section-header {
     background-color: white;
     &:hover {
@@ -270,7 +270,7 @@ body.light {
   }
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-setting-section-header {
     background-color: @ms-color-secondaryBackground;
     &:hover {
