--- a/libs/designer-ui/src/lib/editor/base/tokenpickerbutton.less
+++ b/libs/designer-ui/src/lib/editor/base/tokenpickerbutton.less
@@ -42,3 +42,10 @@
     color: @brandColorLight;
   }
 }
+
+.msla-token-picker-entrypoint-button-expression-icon {
+  position: relative;
+  right: 0px;
+  height: 32px;
+  width: 32px;
+}
