static testing work

--- a/libs/designer-ui/src/lib/editor/base/tokenpickerbutton.less
+++ b/libs/designer-ui/src/lib/editor/base/tokenpickerbutton.less
@@ -44,6 +44,7 @@
 }
 
 .msla-token-picker-entrypoint-button-expression-icon {
+  border: none;
   position: relative;
   right: 0px;
   height: 32px;
