--- a/libs/designer-ui/src/lib/styles.less
+++ b/libs/designer-ui/src/lib/styles.less
@@ -78,6 +78,7 @@
 @import './modals/styles.less';
 @import './recurrence/recurrence.less';
 @import './azureResourcePicker/azureResourcePicker.less';
+@import './staticResult/staticResult.less';
 
 .msla-clear-both {
   clear: both;
