Add get error level and udpate style of scope card

--- a/libs/designer-ui/src/lib/card/card.less
+++ b/libs/designer-ui/src/lib/card/card.less
@@ -933,6 +933,10 @@
       }
     }
 
+    .msla-panel-card-wrapper {
+      width: 100%;
+    }
+
     .msla-panel-card-error {
       margin: -4px 12px 6px;
       text-align: left;
