--- a/libs/designer-ui/src/lib/card/scopeCard/scopeCard.less
+++ b/libs/designer-ui/src/lib/card/scopeCard/scopeCard.less
@@ -41,6 +41,7 @@
     flex-wrap: nowrap;
     border-radius: 2px;
     overflow: hidden;
+    width: 100%;
   }
 
   .msla-scope-card-title-button {
@@ -52,6 +53,7 @@
     flex-direction: column;
     align-items: flex-start;
     background-color: var(--brand-color, black);
+    width: 80%;
     .node-button-interaction();
   }
 
