Update styles to tooltip wrapper

--- a/libs/designer-ui/src/lib/card/scopeCard/scopeCard.less
+++ b/libs/designer-ui/src/lib/card/scopeCard/scopeCard.less
@@ -88,6 +88,10 @@
     word-break: break-word;
   }
 
+  .msla-panel-card-error-wrapper {
+    width: 100%;
+  }
+
   .msla-panel-card-error {
     margin: -2px 16px 10px;
     text-align: left;
