--- a/libs/designer-ui/src/lib/label/label.less
+++ b/libs/designer-ui/src/lib/label/label.less
@@ -15,8 +15,16 @@
   padding-right: 2px;
 }
 
+.msla-label-required-parameter-right {
+  color: #a4262c;
+  padding-left: 3px;
+}
+
 .msla-theme-dark {
   .msla-label-required-parameter {
     color: #f4717c;
+  }
+  .msla-label-required-parameter-right {
+    color: #f1707b;
   }
 }
