Update styles of values in values list and add states to inputs/outputs

--- a/libs/designer-ui/src/lib/monitoring/monitoring.less
+++ b/libs/designer-ui/src/lib/monitoring/monitoring.less
@@ -35,7 +35,7 @@
   }
 
   .msla-trace-values {
-    padding: 1em 0;
+    padding: 1em;
     border-top: @defaultBorder;
 
     .msla-trace-download-link {
