finishing main ux work?

--- a/libs/designer-ui/src/lib/staticResult/staticResult.less
+++ b/libs/designer-ui/src/lib/staticResult/staticResult.less
@@ -50,6 +50,7 @@
     width: 95%;
 
     .msla-property-editor-property {
+      padding-bottom: 10px;
       .msla-property-editor-property-header {
         display: flex;
         justify-content: space-between;
