--- a/libs/designer-ui/src/lib/staticResult/staticResult.less
+++ b/libs/designer-ui/src/lib/staticResult/staticResult.less
@@ -78,3 +78,12 @@
     align-self: flex-start;
   }
 }
+
+.msla-static-result-actions {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+  .msla-static-result-action-button {
+    height: 30px;
+  }
+}
