starting work on getting properties

--- a/libs/designer-ui/src/lib/staticResult/staticResult.less
+++ b/libs/designer-ui/src/lib/staticResult/staticResult.less
@@ -82,7 +82,9 @@
 .msla-static-result-actions {
   display: flex;
   justify-content: center;
+  padding-top: 30px;
   margin-top: 30px;
+  border-top: @border;
   .msla-static-result-action-button {
     height: 30px;
   }
