Temp commit (not fixed yet)

--- a/libs/designer-ui/src/lib/token/token.less
+++ b/libs/designer-ui/src/lib/token/token.less
@@ -36,3 +36,17 @@
     top: 6px;
   }
 }
+
+.msla-theme-dark {
+  .msla-token-delete {
+    align-self: center;
+    font-size: @token-font-size;
+    color: #fff;
+    line-height: @token-height;
+    padding: 0px 2px;
+    &:focus {
+      color: rgba(255, 255, 255, 0.5);
+      outline: none;
+    }
+  }
+}
