--- a/libs/designer-ui/src/lib/tokenpicker/tokenpicker.less
+++ b/libs/designer-ui/src/lib/tokenpicker/tokenpicker.less
@@ -1,10 +1,13 @@
 @import (reference) '../variables.less';
-.msla-token-picker-container {
-  background-color: #fafafa;
+
+.msla-theme-light {
+  .msla-token-picker-container {
+    background-color: #fafafa;
+  }
 }
 
 .msla-token-picker {
-  box-shadow: 2px 2px 10px rgba(246, 243, 243, 0.1);
+  // box-shadow: 2px 2px 10px rgba(246, 243, 243, 0.1);
   box-sizing: border-box;
   padding: 1px;
   display: flex;
@@ -231,7 +234,7 @@
   bottom: 0px;
 }
 
-body.dark {
+.msla-theme-dark {
   .msla-token-picker-header {
     border-bottom: 1px solid @ms-color-secondaryBackground;
   }
@@ -252,13 +255,13 @@ body.dark {
   .msla-token-picker-section-header {
     background-color: @ms-color-primaryBackground;
     span {
-      color: rgba(255, 255, 255, 0.5);
+      color: #fff;
     }
   }
   .msla-token-picker-section-header-button {
     background-color: transparent;
     span {
-      color: rgba(255, 255, 255, 0.5);
+      color: #fff;
     }
   }
   .msla-token-picker-section-option {
