laFeat: Consumption - Added Azure resource-based operations (#1632)
* Added Azure resource connectors and psuedo-actions for search

* Cleanup up search panel navigation

* Can now select azure resource operations to get to new page

* Checkpoint, merging master next

* First step completed of multi-step connectors

* Can now load existing azure resource operation manifests

* Added manifests for adding batch and function actions

* InvokeWorkflow manifest loading properly

* All resource operations can now be added

* Azure resource data passed as parameters upon creation (not apim/services yet)

* Fixed tests

* Action metadata is now serialized and deserialized, used for app service actions

* App service and APIM actions now import resource parameters

* More progress on the apim / app service params

* Modified apim and batch manifests for consumption

* More manifest changes

* Switched OAuth and Gateway services over to base

* Some dynamic parameter prep for apim/app service

* Temp commit

* Checkpoint for getting apim working

* APIM Actions are correctly read + serialized

* AppService Actions are correctly read + serialized

* Removed some accidental vscode setting changes

* Small fix

* First round PR self-review fixes

* Various PR Fixes

* Forgot one change

* Last PR fixes

* Fixed tests

* Reverted tsconfig change

* Custom connector adjustments

* Typed some service method return types

--- a/libs/designer/src/lib/ui/styles.less
+++ b/libs/designer/src/lib/ui/styles.less
@@ -138,6 +138,27 @@
   margin: 32px 0;
 }
 
+.msla-flex-row {
+  display: flex;
+  gap: 8px;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.msla-azure-resource-selection {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: center;
+
+  *.ms-Button {
+    border: none;
+    height: 32px;
+    font-size: 14px;
+  }
+}
+
 .msla-theme-dark {
   .react-flow__controls-button {
     background: @ms-color-primaryBackground;
