--- a/libs/designer-ui/src/lib/recurrence/recurrence.less
+++ b/libs/designer-ui/src/lib/recurrence/recurrence.less
@@ -16,3 +16,21 @@
     margin-right: 10px;
   }
 }
+.msla-recurrence-preview {
+  border: 1px dashed #000;
+  background-color: #e9e9f3;
+  margin-bottom: 6px;
+  margin-top: 10px;
+  padding: 6px;
+  .msla-recurrence-preview-title {
+    font-size: 14px;
+    font-weight: 600;
+  }
+  .msla-recurrence-preview-content {
+    .msla-recurrence-friendly-desc {
+      word-break: break-all;
+      display: inline-block;
+      margin-right: 6px;
+    }
+  }
+}
