--- a/libs/designer/src/lib/ui/styles.less
+++ b/libs/designer/src/lib/ui/styles.less
@@ -69,6 +69,10 @@
   box-sizing: border-box;
 }
 
+.msla-designer-tools-left-panel {
+  left: 52px !important; // Add extra 32px taken from the collapsed panel
+}
+
 .react-flow__node {
   transition: transform 0.1s ease-in-out, width 0.1s ease-in-out, height 0.1s ease-in-out;
 }
