--- a/libs/designer/src/lib/ui/styles.less
+++ b/libs/designer/src/lib/ui/styles.less
@@ -61,8 +61,8 @@
 
 .msla-designer-tools {
   position: absolute;
-  left: 20px !important;
-  bottom: 20px !important;
+  left: 20px;
+  bottom: 20px;
   display: flex;
   gap: 8px;
   align-items: flex-end;
@@ -70,7 +70,7 @@
 }
 
 .msla-designer-tools-left-panel {
-  left: 52px !important; // Add extra 32px taken from the collapsed panel
+  left: 52px; // Add extra 32px taken from the collapsed panel
 }
 
 .react-flow__node {
