--- a/libs/designer/src/lib/ui/styles.less
+++ b/libs/designer/src/lib/ui/styles.less
@@ -61,12 +61,16 @@
 
 .msla-designer-tools {
   position: absolute;
-  left: 20px !important;
-  bottom: 20px !important;
+  left: 20px;
+  bottom: 20px;
   display: flex;
   gap: 8px;
   align-items: flex-end;
   box-sizing: border-box;
+}
+
+.msla-designer-tools-left-panel {
+  left: 52px; // Add extra 32px taken from the collapsed panel
 }
 
 .react-flow__node {
