--- a/libs/designer-ui/src/lib/pager/pager.less
+++ b/libs/designer-ui/src/lib/pager/pager.less
@@ -108,7 +108,7 @@
 .msla-pager-v2 {
   display: flex;
   justify-content: center;
-  margin-bottom: 10px;
+  margin: 5px;
   position: relative;
   z-index: 5; /* Force pager to render over lines. */
 
