condition editor accessibility and clickable / typeahead button

--- a/libs/designer-ui/src/lib/arrayeditor/arrayeditor.less
+++ b/libs/designer-ui/src/lib/arrayeditor/arrayeditor.less
@@ -56,6 +56,9 @@
           &.readonly {
             background-color: rgba(128, 128, 128, 0.1);
           }
+          &:focus {
+            outline: 2px solid @primary_focus_blue;
+          }
           p {
             margin: 0;
             line-height: 1.5rem;
@@ -111,6 +114,9 @@
           padding-inline-start: 5px;
           &.readonly {
             background-color: rgba(128, 128, 128, 0.1);
+          }
+          &:focus {
+            outline: 2px solid @primary_focus_blue;
           }
           p {
             margin: 0;
