--- a/libs/designer-ui/src/lib/combobox/combobox.less
+++ b/libs/designer-ui/src/lib/combobox/combobox.less
@@ -48,6 +48,9 @@
         &.readonly {
           background-color: rgba(128, 128, 128, 0.1);
         }
+        &:focus {
+          outline: 2px solid @primary_focus_blue;
+        }
         p {
           margin: 0;
           line-height: 22px;
