--- a/libs/designer-ui/src/lib/html/htmleditor.less
+++ b/libs/designer-ui/src/lib/html/htmleditor.less
@@ -234,6 +234,9 @@ button.item.dropdown-item-active img {
     &.readonly {
       background-color: rgba(128, 128, 128, 0.1);
     }
+    &:focus {
+      outline: 2px solid @primary_focus_blue;
+    }
     p {
       margin-block-end: 0px;
       margin-block-start: 0px;
