--- a/libs/designer-ui/src/lib/authentication/authentication.less
+++ b/libs/designer-ui/src/lib/authentication/authentication.less
@@ -61,6 +61,9 @@
     &.readonly {
       background-color: rgba(128, 128, 128, 0.1);
     }
+    &:focus {
+      outline: 2px solid @primary_focus_blue;
+    }
     p {
       margin: 0;
     }
