--- a/libs/designer-ui/src/lib/editor/base/tokenpickerbutton.less
+++ b/libs/designer-ui/src/lib/editor/base/tokenpickerbutton.less
@@ -57,63 +57,22 @@
       display: none;
     }
     li {
-      margin: 0;
       min-width: 180px;
-      font-size: 14px;
-      outline: none;
       cursor: pointer;
-      border-radius: 8px;
+      padding: 8px;
+      color: #323130;
+      cursor: pointer;
+      display: flex;
+      justify-content: flex-start;
+      gap: 8px;
+      background-color: #fff;
+      &:hover {
+        background-color: #eee;
+      }
     }
     li.selected {
       background: #eee;
     }
-  }
-  li {
-    margin: 0 8px 0 8px;
-    padding: 8px;
-    color: #323130;
-    cursor: pointer;
-    line-height: 16px;
-    font-size: 15px;
-    display: flex;
-    align-content: center;
-    flex-direction: row;
-    flex-shrink: 0;
-    background-color: #fff;
-    border-radius: 8px;
-    border: 0;
-    &:first-child {
-      border-radius: 8px 8px 0px 0px;
-    }
-    &:last-child {
-      border-radius: 0px 0px 8px 8px;
-    }
-    &:hover {
-      background-color: #eee;
-    }
-    .text {
-      display: flex;
-      line-height: 20px;
-      flex-grow: 1;
-      min-width: 150px;
-    }
-    .icon {
-      display: flex;
-      width: 20px;
-      height: 20px;
-      user-select: none;
-      margin-right: 8px;
-      line-height: 16px;
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;
-    }
-  }
-  li.active {
-    display: flex;
-    width: 20px;
-    height: 20px;
-    background-size: contain;
   }
 }
 
