cleanup and add delete implementation

--- a/libs/designer-ui/src/lib/styles.less
+++ b/libs/designer-ui/src/lib/styles.less
@@ -79,6 +79,7 @@
 @import './recurrence/recurrence.less';
 @import './azureResourcePicker/azureResourcePicker.less';
 @import './staticResult/staticResult.less';
+@import './dynamicallyaddedparameter/dynamicallyaddedparameter.less';
 
 .msla-clear-both {
   clear: both;
