--- a/libs/designer-ui/src/lib/html/htmleditor.less
+++ b/libs/designer-ui/src/lib/html/htmleditor.less
@@ -1,4 +1,4 @@
-.toolbar {
+.msla-html-editor-toolbar {
   display: flex;
   margin-bottom: 1px;
   background: #fff;
@@ -8,106 +8,93 @@
   vertical-align: middle;
   overflow: auto;
   height: 36px;
-}
-.toolbar button.toolbar-item {
-  border: 0;
-  display: flex;
-  background: none;
-  border-radius: 10px;
-  padding: 8px;
-  cursor: pointer;
-  vertical-align: middle;
-  flex-shrink: 0;
-  align-items: center;
-  justify-content: space-between;
-}
-.toolbar button.toolbar-item:disabled {
-  cursor: not-allowed;
-}
-.toolbar button.toolbar-item.spaced {
-  margin-right: 2px;
-}
+  button.toolbar-item {
+    border: 0;
+    display: flex;
+    background: none;
+    border-radius: 10px;
+    padding: 8px;
+    cursor: pointer;
+    vertical-align: middle;
+    flex-shrink: 0;
+    align-items: center;
+    justify-content: space-between;
+  }
+  button.toolbar-item:disabled {
+    cursor: not-allowed;
+  }
+  button.toolbar-item img.format {
+    background-size: contain;
+    display: inline-block;
+    height: 18px;
+    width: 18px;
+    vertical-align: -0.25em;
+    display: flex;
+    opacity: 0.6;
+  }
+  button.toolbar-item:disabled img.format {
+    opacity: 0.2;
+  }
+  button.toolbar-item.active {
+    background-color: rgba(223, 232, 250, 0.3);
+  }
 
-.toolbar button.toolbar-item img.format {
-  background-size: contain;
-  display: inline-block;
-  height: 18px;
-  width: 18px;
-  vertical-align: -0.25em;
-  display: flex;
-  opacity: 0.6;
-}
+  button.toolbar-item.active img {
+    opacity: 1;
+  }
 
-.toolbar button.toolbar-item:disabled img.format {
-  opacity: 0.2;
-}
+  .toolbar-item:hover:not([disabled]) {
+    background-color: #eee;
+  }
 
-.toolbar button.toolbar-item.active {
-  background-color: rgba(223, 232, 250, 0.3);
-}
+  .toolbar-item.font-family .text {
+    display: block;
+  }
+  .toolbar-item {
+    .text {
+      display: flex;
+      line-height: 20px;
+      vertical-align: middle;
+      font-size: 14px;
+      color: #777;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      height: 20px;
+      text-align: left;
+      padding-right: 10px;
+    }
+    .icon {
+      display: flex;
+      width: 20px;
+      height: 20px;
+      user-select: none;
+      margin-right: 8px;
+      line-height: 16px;
+      background-size: contain;
+    }
+  }
 
-.toolbar button.toolbar-item.active img {
-  opacity: 1;
-}
-
-.toolbar .toolbar-item:hover:not([disabled]) {
-  background-color: #eee;
-}
-
-.toolbar .toolbar-item.font-family .text {
-  display: block;
-  max-width: 40px;
-}
-
-.toolbar .code-language {
-  width: 150px;
-}
-
-.toolbar .toolbar-item .text {
-  display: flex;
-  line-height: 20px;
-  vertical-align: middle;
-  font-size: 14px;
-  color: #777;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  height: 20px;
-  text-align: left;
-  padding-right: 10px;
-}
-
-.toolbar .toolbar-item .icon {
-  display: flex;
-  width: 20px;
-  height: 20px;
-  user-select: none;
-  margin-right: 8px;
-  line-height: 16px;
-  background-size: contain;
-}
-
-.toolbar img.chevron-down {
-  margin-top: 3px;
-  width: 16px;
-  height: 16px;
-  display: flex;
-  user-select: none;
-}
-
-.toolbar img.chevron-down.inside {
-  width: 16px;
-  height: 16px;
-  display: flex;
-  margin-left: -25px;
-  margin-top: 11px;
-  margin-right: 10px;
-  pointer-events: none;
-}
-
-.toolbar .divider {
-  width: 1px;
-  background-color: #eee;
-  margin: 0 4px;
+  img.chevron-down {
+    margin-top: 3px;
+    width: 16px;
+    height: 16px;
+    display: flex;
+    user-select: none;
+  }
+  img.chevron-down.inside {
+    width: 16px;
+    height: 16px;
+    display: flex;
+    margin-left: -25px;
+    margin-top: 11px;
+    margin-right: 10px;
+    pointer-events: none;
+  }
+  .divider {
+    width: 1px;
+    background-color: #eee;
+    margin: 0 4px;
+  }
 }
 
 .msla-html-editor-dropdown-items-container {
@@ -197,23 +184,11 @@ img.chevron-down {
   width: 8px;
 }
 
-@media screen and (max-width: 1100px) {
-  .dropdown-button-text {
-    display: none !important;
-  }
-  .font-size .dropdown-button-text {
-    display: flex !important;
-  }
-  .code-language .dropdown-button-text {
-    display: flex !important;
-  }
-}
-
-button.item.dropdown-item-active {
+button.item.msla-dropdown-item-active {
   background-color: rgba(223, 232, 250, 0.3);
 }
 
-button.item.dropdown-item-active img {
+button.item.msla-dropdown-item-active img {
   opacity: 1;
 }
 
