--- a/libs/designer-ui/src/lib/html/htmleditor.less
+++ b/libs/designer-ui/src/lib/html/htmleditor.less
@@ -47,8 +47,9 @@
     background-color: #eee;
   }
 
-  .toolbar-item.font-family {
-    width: 110px;
+  .toolbar-item.font-family,
+  .toolbar-item.block-controls {
+    width: 80px;
   }
 
   .toolbar-item.font-family .text {
@@ -56,7 +57,6 @@
   }
   .toolbar-item {
     .text {
-      display: flex;
       line-height: 20px;
       vertical-align: middle;
       font-size: 14px;
@@ -68,7 +68,6 @@
       padding-right: 10px;
     }
     .icon {
-      display: flex;
       width: 20px;
       height: 20px;
       user-select: none;
