--- a/libs/designer-ui/src/lib/html/htmleditor.less
+++ b/libs/designer-ui/src/lib/html/htmleditor.less
@@ -47,13 +47,20 @@
     background-color: #eee;
   }
 
-  .toolbar-item.font-family,
   .toolbar-item.block-controls {
     width: 80px;
   }
 
+  .toolbar-item.font-family {
+    width: 70px;
+  }
+
   .toolbar-item.font-family .text {
     display: block;
+  }
+
+  .toolbar-item.font-size .text {
+    padding-right: 10px;
   }
   .toolbar-item {
     .text {
@@ -65,7 +72,6 @@
       overflow: hidden;
       height: 20px;
       text-align: left;
-      padding-right: 10px;
     }
     .icon {
       width: 20px;
