--- a/libs/designer/src/lib/ui/styles.less
+++ b/libs/designer/src/lib/ui/styles.less
@@ -19,6 +19,16 @@
   overflow: visible;
 }
 
+.primary-button-footer {
+  position: fixed;
+  bottom: 50px;
+  width: 200px;
+}
+
+.text-field-standard-input {
+  width: 215px;
+}
+
 .node-handle {
   visibility: hidden;
   &.top {
@@ -140,6 +150,13 @@
 
 .msla-loading-container {
   margin: 32px 0;
+}
+
+.msla-properties-header-text {
+  font-size: 14px;
+  font-weight: 600;
+  font-family: @font-family;
+  line-height: 40px;
 }
 
 .msla-flex-row {
